<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.CheckBoxPreference
        android:key="proxy_b23_url"
        android:title="@string/proxy_b23_url_title"
        android:summary="@string/proxy_b23_url_summary"/>

    <androidx.preference.CheckBoxPreference
        android:key="proxy_live_share_url"
        android:title="@string/proxy_live_share_title"
        android:summary="@string/proxy_live_share_summary"/>

    <androidx.preference.EditTextPreference
        android:key="custom_repository_url"
        android:title="@string/custom_repository_url_title"
        android:defaultValue="sdad"
        android:summary="@string/custom_repository_url_summary"
        android:icon="@drawable/ic_github_24_text_color_primary"/>

    <Preference
        android:key="restart_to_intro"
        android:title="@string/restart_to_intro_title"/>

    <androidx.preference.PreferenceCategory android:title="@string/firebase_title">

        <Preference
            android:key="firebase_instance_id"
            android:title="@string/firebase_instance_id_title"
            android:summary="@string/firebase_instance_id_not_registered_yet"/>

        <androidx.preference.CheckBoxPreference
            android:key="enabled_analytics"
            android:title="@string/enabled_analytics_settings_title"
            android:summary="@string/enabled_analytics_settings_summary"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>